Finish posting items
1. Update .gitignore
2. Add config.js.example & Remove config.js
3. Using Ajax when calling back-end api (TODO)

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,3 +22,7 @@
         <a href="/join" class="login-link">没有账号？现在注册</a>
       </form>
     </main>
+
+{{#extend "scripts"}}
+<script src="/javascripts/login.js" type="text/javascript"></script>
+{{/extend}}
