--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,1 +1,166 @@
-<h1>{{info}}</h1>
+{{#extend "stylesheets"}}
+<link rel="stylesheet" href="/stylesheets/example.css">
+{{/extend}}
+{{#extend "stylesheets"}}
+<link rel="stylesheet" href="/stylesheets/example.css">
+{{/extend}}
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-lg" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
+            <span class="sr-only">Toggle navigation</span>
+          </button>
+          <a class="navbar-brand" href="/">L&FMS</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse-01">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">主页</a></li>
+            <li><a href="#fakelink">站内信</a></li>
+            <li><a href="#fakelink">关于我们</a></li>
+          </ul>
+
+          <form class="navbar-form navbar-left" action="/search" role="search" method="GET">
+            <div class="form-group">
+              <div class="input-group">
+                <input class="form-control" name="q" id="navbarInput-01" type="search" placeholder="搜索">
+                <span class="input-group-btn">
+                  <button type="submit" class="btn">
+                    <span class="fui-search"></span>
+                  </button>
+                </span>
+              </div>
+            </div>
+          </form><!-- /search -->
+          
+          <ul class="nav navbar-nav navbar-right">
+          {{#with currentUser}}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{name}}<b class="caret"></b></a>
+              <span class="dropdown-arrow"></span>
+              <ul class="dropdown-menu">
+                <li><a href="/users/{{id}}">个人页面</a></li>
+                <li><a href="#">设置</a></li>
+                <li class="divider"></li>
+                <li><a href="/logout">注销</a></li>
+              </ul>
+            </li>
+          {{else}}
+            <li><a href="/join" class="navbar-link btn-sign-up">注册</a></li>
+            <li><a href="/login" class="navbar-link">登录</a></li>
+          {{/with}}
+          </ul>
+          
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav><!-- /.navbar -->
+
+    <main class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel panel-default" id="profile-panel">
+            <div class="panel-heading" id="profile-panel-heading">
+            {{#with user}}
+              <div class="media">
+                <div class="pull-left">
+                  <img class="media-object img-thumbnail" src="/images/default.jpg" alt="{{ name }}" style="width: 200px;">
+                </div>
+                <div class="media-body">
+                  <h3 class="media-heading">{{ name }}</h3>
+                  <p>{{ email }}</p>
+                  <p>{{ birth }}</p>
+                  <p>{{ gender }}</p>
+                </div>
+              </div>
+            {{/with}}
+            </div>
+
+            <div class="panel-body" id="profile-panel-body">
+              <ul class="nav nav-tabs nav-justified" role="tablist">
+                <li class="active">
+                  <a href="#found" role="tab" data-toggle="tab">
+                    <span class="badge pull-right">{{ foundCount }}</span> 我找到的物品
+                  </a>
+                </li>
+                <li>
+                  <a href="#lost" role="tab" data-toggle="tab">
+                    <span class="badge pull-right">{{ lostCount }}</span> 我丢失的物品
+                  </a>
+                </li>
+              </ul><!-- /.nav-tabs -->
+
+              <div class="tab-content" style="min-height: 250px;">
+                <div class="tab-pane active" id="found">
+                  <div class="table-responsive">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th>物品名</th>
+                          <th>发布时间</th>
+                          <th>地点</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                      {{#each foundItems}}
+                        <tr>
+                          <td><a href="/items/{{ id }}">{{ name }}</a></td>
+                          <td>{{ time }}</td>
+                          <td>{{ place }}</td>
+                        </tr>
+                      {{/each}}
+                      </tbody>
+                    </table>
+                  </div>
+                </div><!-- /.tab-pane#found -->
+
+                <div class="tab-pane" id="lost">
+                  <div class="table-responsive">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th>物品名</th>
+                          <th>发布时间</th>
+                          <th>地点</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                      {{#each lostItems}}
+                        <tr>
+                          <td><a href="/items/{{ id }}">{{ name }}</a></td>
+                          <td>{{ time }}</td>
+                          <td>{{ place }}</td>
+                        </tr>
+                      {{/each}}
+                      </tbody>
+                    </table>
+                  </div>
+                </div><!-- /.tab-pane#lost -->
+              </div><!-- /.tab-content -->
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+    </main>
+
+    <!-- =====FOOTER===== -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-7">
+            <h3 class="footer-title">L&FMS</h3>
+            <p><a href="/">L&FMS</a> © 2015 • 版权所有</p>
+          </div> <!-- /col-xs-7 -->
+
+          <div class="col-xs-5">
+            <div class="footer-banner">
+              <h3 class="footer-title">Feedback</h3>
+              <ul>
+                <li>Contact with us, if you have any problems!</li>
+              </ul>
+              Email to: <a href="mailto:webmaster@lfms.com">webmaster@lfms.com</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
