--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>{{title}}</title>
 
     <!-- Bootstrap css -->
@@ -25,7 +25,7 @@
 
     <!-- jQuery -->
     <script src="/javascripts/jquery-2.0.3.min.js" type="text/javascript"></script>
-    
+
     <!-- Bootstrap js -->
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
