--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,6 +29,10 @@
     <!-- Bootstrap js -->
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
+    <!-- LeanCloud -->
+    <script src="https://cdn1.lncld.net/static/js/av-mini-0.6.1.js" type="text/javascript"></script>
+    <script src="/javascripts/leancloud-global.js" type="text/javascript"></script>
+
     <!-- Custom js -->
     {{{block "scripts"}}}
   </body>
