--- a/views/map.hbs
+++ b/views/map.hbs
@@ -63,5 +63,6 @@
 
 {{#extend "scripts"}}
 <script src="http://api.map.baidu.com/api?v=2.0&ak=KS4GIyA5XOzQ6zsTOobXdwxO" type="text/javascript"></script>
+<script src="/javascripts/map-utils.js" type="text/javascript"></script>
 <script src="/javascripts/map.js" type="text/javascript"></script>
 {{/extend}}
