--- a/views/postLostItem.hbs
+++ b/views/postLostItem.hbs
@@ -7,7 +7,7 @@
         <img src="/images/icons/svg/paper-bag.svg" alt="Welcome th L&FMS">
         <h4>Complete the <small>information</small></h4>
       </div>
-      <form class="login-form" name="loginForm" action="/api/v1/items/lost" method="POST" enctype="multipart/form-data">
+      <form class="login-form" name="loginForm" action="/api/v1/items/new/lost" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label for="post-name" style="color: #bfc9ca;">物品名</label>
           <input type="text" class="form-control login-field" placeholder="物品名" id="post-name" name="name" required autofocus>
@@ -15,12 +15,22 @@
         </div>
         <div class="form-group">
           <label for="post-place" style="color: #bfc9ca;">地点</label>
-          <input type="text" class="form-control login-field" placeholder="地点" name="place" id="post-place" required>
-          <label for="post-place" class="login-field-icon fui-location"></label>
+          <div class="input-group">
+            <input type="text" class="form-control login-field" placeholder="地点" name="place" id="post-place" required>
+            <input type="hidden" class="form-control" name="location" id="post-location">
+            <span class="input-group-btn">
+              <button class="btn btn-default" id="location-button" type="button" data-loading-text="定位中...">
+                <span class="fui-location"></span>获取当前位置
+              </button>
+            </span>
+          </div><!-- /input-group -->
+        </div>
+        <div class="form-group">
+          <div id="item-map"></div>
         </div>
         <div class="form-group">
           <label for="post-image" style="color: #bfc9ca;">图片</label>
-          <input type="file" class="form-control login-field filestyle" id="post-image" name="image" accept="image/*" required>
+          <input type="file" class="form-control login-field filestyle" data-buttonText="选择文件" id="post-image" name="image" accept="image/*" required>
         </div>
         <div class="form-group">
           <label for="post-tags" style="color: #bfc9ca;">标签</label>
@@ -28,7 +38,7 @@
         </div>
         <div class="form-group">
           <label for="post-description" style="color: #bfc9ca;">物品描述</label>
-          <textarea class="form-control login-field" name="description" id="post-description" cols="30" rows="5" placeholder="物品描述"></textarea>
+          <textarea class="form-control login-field" name="itemDescription" id="post-description" cols="30" rows="5" placeholder="物品描述"></textarea>
         </div>
         <button type="submit" class="btn btn-danger btn-lg btn-block">提交</button>
       </form>
@@ -38,8 +48,7 @@
 <script src="/javascripts/bootstrap-select.js" type="text/javascript"></script>
 <script src="/javascripts/bootstrap-filestyle.min.js" type="text/javascript"></script>
 <script src="/javascripts/jquery.tagsinput.js" type="text/javascript"></script>
-<script type="text/javascript">
-  $("select").selectpicker({ style: 'btn-hg btn-primary', menuStyle: 'dropdown-inverse' });
-  $(".tagsinput").tagsInput();
-</script>
+<script src="http://api.map.baidu.com/api?v=2.0&ak=KS4GIyA5XOzQ6zsTOobXdwxO" type="text/javascript"></script>
+<script src="/javascripts/map-utils.js" type="text/javascript"></script>
+<script src="/javascripts/postItem.js" type="text/javascript"></script>
 {{/extend}}
