Update Map Display

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -85,7 +85,7 @@
                 <p>{{ itemDescription }}</p>
               </li>
             </ul>
-            <div id="item-map" data-location="{{ location }}" data-address="{{ place }}"></div>
+            <div id="item-map" data-location="{{ location }}" data-address="{{ place }}" data-type="{{ type }}"></div>
           {{/with}}
           </div><!-- /.item-detail-tile -->
         </div>
