--- a/views/map.hbs
+++ b/views/map.hbs
@@ -65,4 +65,6 @@
 <script src="http://api.map.baidu.com/api?v=2.0&ak=KS4GIyA5XOzQ6zsTOobXdwxO" type="text/javascript"></script>
 <script src="/javascripts/map-utils.js" type="text/javascript"></script>
 <script src="/javascripts/map.js" type="text/javascript"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+<link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
 {{/extend}}
