--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -23,3 +23,24 @@ main {
   width: 100%;
   height: 100%
 }
+
+.result-list {
+  overflow-y: scroll;
+}
+
+.result-list .result-item {
+  min-height: 50px;
+
+  border-bottom: 2px solid #ddd;
+
+  padding: 10px 15px 10px 30px;
+}
+
+.result-list .result-item:hover {
+  cursor: pointer;
+  background-color: #f7f7f7;
+}
+
+.result-list .result-item .result-item-image {
+  width: 100%;
+}
