--- a/views/map.hbs
+++ b/views/map.hbs
@@ -19,7 +19,7 @@
             <li><a href="#fakelink">关于我们</a></li>
           </ul>
 
-          <form class="navbar-form navbar-left" action="/search" role="search" method="GET">
+          <form class="navbar-form navbar-left" id="map-search-form" role="search" method="GET">
             <div class="form-group">
               <div class="input-group">
                 <input class="form-control" name="q" id="navbarInput-01" type="search" placeholder="搜索">
@@ -55,7 +55,9 @@
     </nav><!-- /.navbar -->
 
     <main class="row">
-      <div class="col-sm-3 hidden-xs" id="result-list"></div>
+      <div class="col-sm-3 hidden-xs result-list" id="result-list">
+        <div class="row"></div>
+      </div>
       <div class="col-sm-9">
         <div id="item-map"></div>
       </div>
@@ -66,5 +68,6 @@
 <script src="/javascripts/map-utils.js" type="text/javascript"></script>
 <script src="/javascripts/map.js" type="text/javascript"></script>
 <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/library/MarkerManager/1.2//src/MarkerManager_min.js"></script>
 <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
 {{/extend}}
