--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,7 @@
               <span class="dropdown-arrow"></span>
               <ul class="dropdown-menu">
                 <li><a href="/users/{{id}}">个人页面</a></li>
-                <li><a href="#">设置</a></li>
+                <li><a href="/settings">设置</a></li>
                 <li class="divider"></li>
                 <li><a href="/logout">注销</a></li>
               </ul>
