--- a/views/join.hbs
+++ b/views/join.hbs
@@ -8,7 +8,7 @@
         <h4>Please finish your personal infomation</h4>
       </div>
 
-      <form class="login-form" name="signupForm" action="/api/v1/users" method="POST">
+      <form class="login-form" name="signupForm" action="/users" method="POST">
         {{! 账号信息 }}
         <fieldset>
           <legend>账号信息</legend>
@@ -34,7 +34,7 @@
             <label for="register-pass2" class="login-field-icon fui-lock"></label>
           </div>
         </fieldset>
-        
+
         {{! 个人信息 }}
         <fieldset>
           <legend>个人信息</legend>
