--- a/views/postLostItem.hbs
+++ b/views/postLostItem.hbs
@@ -7,7 +7,7 @@
         <img src="/images/icons/svg/paper-bag.svg" alt="Welcome th L&FMS">
         <h4>Complete the <small>information</small></h4>
       </div>
-      <form class="login-form" name="loginForm" action="/api/v1/items/new/lost" method="POST" enctype="multipart/form-data">
+      <form class="login-form" name="loginForm" action="/items/new/lost" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label for="post-name" style="color: #bfc9ca;">物品名</label>
           <input type="text" class="form-control login-field" placeholder="物品名" id="post-name" name="name" required autofocus>
