--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,7 +31,9 @@
 
     <!-- LeanCloud -->
     <script src="https://cdn1.lncld.net/static/js/av-mini-0.6.1.js" type="text/javascript"></script>
+    <script src="/bower_components/leancloud-push.js/src/AV.push.js" type="text/javascript"></script>
     <script src="/javascripts/leancloud-global.js" type="text/javascript"></script>
+    <script src="/javascripts/notification.js" type="text/javascript"></script>
 
     <!-- Custom js -->
     {{{block "scripts"}}}
