--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,7 +18,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary btn-lg btn-block">登录</button>
-        <a href="#" class="login-link">忘记密码?</a>
+        {{!-- <a href="#" class="login-link">忘记密码?</a> --}}
         <a href="/join" class="login-link">没有账号？现在注册</a>
       </form>
     </main>
