--- a/views/map.hbs
+++ b/views/map.hbs
@@ -3,6 +3,23 @@
 <link rel="stylesheet" href="/stylesheets/map.css">
 {{/extend}}
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">正在加载...</h4>
+          </div>
+          <div class="modal-body">
+            <div class="progress">
+              <div class="progress-bar" id="loading-progress" style="width: 0%;"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-lg" role="navigation">
       <div class="container">
@@ -15,8 +32,7 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-01">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">主页</a></li>
-            <li><a href="#fakelink">站内信</a></li>
-            <li><a href="#fakelink">关于我们</a></li>
+            <li><a href="#fakelink">消息中心</a></li>
           </ul>
 
           <form class="navbar-form navbar-left" id="map-search-form" role="search" method="GET">
@@ -39,7 +55,7 @@
               <span class="dropdown-arrow"></span>
               <ul class="dropdown-menu">
                 <li><a href="/users/{{id}}">个人页面</a></li>
-                <li><a href="#">设置</a></li>
+                <li><a href="/settings">设置</a></li>
                 <li class="divider"></li>
                 <li><a href="/logout">注销</a></li>
               </ul>
@@ -56,7 +72,11 @@
 
     <main class="row">
       <div class="col-sm-3 hidden-xs result-list" id="result-list">
-        <div class="row"></div>
+        <div class="row tools">
+          <div class="col-sm-6"><a href="/items/new/lost" class="center-block btn btn-danger">我丢东西了！</a></div>
+          <div class="col-sm-6"><a href="/items/new/found" class="center-block btn btn-primary">我捡到东西了！</a></div>
+        </div>
+        <div class="row list"></div>
       </div>
       <div class="col-sm-9">
         <div id="item-map"></div>
