--- a/views/user.hbs
+++ b/views/user.hbs
@@ -13,9 +13,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-01">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">主页</a></li>
-            <li><a href="#fakelink">站内信</a></li>
-            <li><a href="#fakelink">关于我们</a></li>
+            <li><a href="/">主页</a></li>
+            <li><a href="#fakelink">消息中心</a></li>
           </ul>
 
           <form class="navbar-form navbar-left" action="/search" role="search" method="GET">
@@ -38,7 +37,7 @@
               <span class="dropdown-arrow"></span>
               <ul class="dropdown-menu">
                 <li><a href="/users/{{id}}">个人页面</a></li>
-                <li><a href="#">设置</a></li>
+                <li><a href="/settings">设置</a></li>
                 <li class="divider"></li>
                 <li><a href="/logout">注销</a></li>
               </ul>
