--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -15,7 +15,9 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-01">
           <ul class="nav navbar-nav">
             <li><a href="/">主页</a></li>
-            <li><a href="#fakelink">消息中心</a></li>
+          {{#with currentUser}}
+            <li><a href="/notificationCenter">消息中心 <span class="navbar-new">{{ unreadNotifications }}</span></a></li>
+          {{/with}}
           </ul>
 
           <form class="navbar-form navbar-left" action="/search" role="search" method="GET">
@@ -56,15 +58,20 @@
     <main class="container">
       <div class="row">
         <div class="col-sm-3">
-        {{#with user}}
+        {{#if user}}
           <div class="tile person-tile">
             <img src="/images/default.jpg" alt="Avatar" class="tile-image big-illustration">
-            <h3 class="tile-title"><a href="/users/{{ id }}">{{ name }}</a></h3>
-            <p>手机: {{ phone }}</p>
-            <p>地址: {{ address }}</p>
-            <a href="/GetDialogue.aspx?user2ID={{ id }}" class="btn btn-primary btn-large btn-block">请联系我</a>
+            <h3 class="tile-title"><a href="/users/{{ user.id }}">{{ user.name }}</a></h3>
+            <p>手机: {{ user.phone }}</p>
+            <p>地址: {{ user.address }}</p>
+            {{#ifCond user.id currentUser.id}}
+            {{else}}
+            {{#if currentUser.id}}
+            <button data-receiver="{{ user.id }}" data-sender="{{ currentUser.id }}" data-item="{{ item.id }}" class="btn btn-primary btn-large btn-block" id="contact-btn" data-loading-text="发送中...">请联系我</button>
+            {{/if}}
+            {{/ifCond}}
           </div><!-- /.person-tile -->
-        {{/with}}
+        {{/if}}
         </div>
 
         <div class="col-sm-offset-1 col-sm-8">
@@ -98,6 +105,7 @@
                 <label for="comment-content" class="sr-only">Email address</label>
                 <textarea name="content" class="form-control" id="comment-content" placeholder="评论..." maxlength="140" onkeypress="if(event.keyCode==13) return false;"></textarea>
                 <input id="comment-reply-target" type="hidden" name="destId">
+                <input type="hidden" name="itemOwner" value="{{ user.id }}">
               </div>
               <div class="comment-btn">
                 <button type="submit" class="btn btn-inverse" id="comment-btn">评论</button>
