--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,8 +14,9 @@
         <div class="collapse navbar-collapse" id="navbar-collapse-01">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">主页</a></li>
-            <li><a href="#fakelink">站内信</a></li>
-            <li><a href="#fakelink">关于我们</a></li>
+          {{#with currentUser}}
+            <li><a href="/notificationCenter">消息中心 <span class="navbar-new">{{ unreadNotifications }}</span></a></li>
+          {{/with}}
           </ul>
 
           <form class="navbar-form navbar-left" action="/search" role="search" method="GET">
