--- a/views/user.hbs
+++ b/views/user.hbs
@@ -66,7 +66,7 @@
             {{#with user}}
               <div class="media">
                 <div class="pull-left">
-                  <img class="media-object img-thumbnail" src="/images/default.jpg" alt="{{ name }}" style="width: 200px;">
+                  <img class="media-object img-thumbnail" src="/images/default.png" alt="{{ name }}" style="width: 200px;">
                 </div>
                 <div class="media-body">
                   <h3 class="media-heading">{{ name }}</h3>
