--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -64,7 +64,7 @@
         <div class="col-sm-3">
         {{#if user}}
           <div class="tile person-tile">
-            <img src="/images/default.jpg" alt="Avatar" class="tile-image big-illustration">
+            <img src="/images/default.png" alt="Avatar" class="tile-image big-illustration">
             <h3 class="tile-title"><a href="/users/{{ user.id }}">{{ user.name }}</a></h3>
             <p>手机: {{ user.phone }}</p>
             <p>地址: {{ user.address }}</p>
@@ -85,10 +85,13 @@
             <h3 class="tile-title">[{{ name }}]</h3><!-- /.tile-title -->
             <ul>
               <li>
-                <span class="fui-time"></span> {{ time }}
+                <span class="fui-time"></span> 时间：{{ time }}
               </li>
               <li>
-                <span class="fui-location"></span> {{ place }}
+                <span class="fui-location"></span> 地点：{{ place }}
+              </li>
+              <li>
+                <span class="fui-new"></span> 标签：{{ tags }}
               </li>
               <li class="item-description">
                 <span class="fui-list"></span> 物品描述:
@@ -124,7 +127,7 @@
             <div class="item-comment clearfix">
               <div class="item-comment-tools pull-right"><button class="item-comment-reply btn btn-primary btn-xs" data-owner="{{ author.id }}" type="button">回复</button></div>
               <a target="_balank" href="/users/{{ author.id }}" class="avatar">
-                <img src="/images/default.jpg" width="50">
+                <img src="/images/default.png" width="50">
               </a><!-- /.avatar -->
 
               <div class="item-comment-content">
